manifests/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  namespace: train-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
      - name: booking-container
        image: rwdnas1/booking-image:0.0.1  # Update with your image
        ports:
        - containerPort: 3003
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: train-system
spec:
  type: ClusterIP
  selector:
    app: booking
  ports:
  - port: 3003
    targetPort: 3003
